--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <aside class="sidebar">
                   <!-- <button id="test-button"></button> -->
                   <h2 class="section-title">All posts</h2>
-                  <ul class="list-titles">
+                  <ul class="list titles">
                     <li><a href="#article-1" class="active"><span>Article 1</span></a></li>
                     <li><a href="#article-2" class="active"><span>Article 2</span></a></li>
                     <li><a href="#article-3" class="active"><span>Article 3</span></a></li>
