HTNL_add>handlebars&&hadlebarSourceMoved>no error

--- a/index.html
+++ b/index.html
@@ -261,8 +261,15 @@
           <div class="website-display-options">
             <!-- add handlebar source  -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+
             <!-- add handlebar to the project -->
             <script id="template-article-link" type="text/x-handlebars-template">
+              <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+            </script>
+            <script id="template-tag-link-article" type="text/x-handlebars-template">
+              <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+            </script>
+            <script id="template-author-article" type="text/x-handlebars-template">
               <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
             </script>
             <!-- handlebars script from handlebarsjs.com -->
