--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
             </script>
             <!-- empty object tagCloudLink -->
-            <script id="tagCloudLink" type="text/x-handlebars-template">
+            <script id="template-tag-Cloud-Link" type="text/x-handlebars-template">
               <li><a href="#{{ id }}"></a><span> x\</span></li></script>
             </script>
             <!-- handlebars script from handlebarsjs.com -->
