modify script id="template-tag-Cloud-Link"

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </script>
             <!-- empty object tagCloudLink -->
             <script id="template-tag-Cloud-Link" type="text/x-handlebars-template">
-              <li><a href="#{{ id }}"></a><span> x\</span></li></script>
+              <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
             </script>
             <!-- handlebars script from handlebarsjs.com -->
             <script id="entry-template" type="text/x-handlebars-template">
