--- a/index.html
+++ b/index.html
@@ -273,8 +273,14 @@
               <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
             </script>
             <!-- empty object tagCloudLink -->
-            <script id="template-tag-Cloud-Link" type="text/x-handlebars-template">
+            <!-- <script id="template-tag-Cloud-Link" type="text/x-handlebars-template">
               <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+            </script> -->
+
+            <script id="template-tag-Cloud-Link" type="text/x-handlebars-template">
+              {{#each tags}}
+              <li><a href="#tag-{{ tag }}" class="{{className}}"><span>{{ tag }}</span></a></li>
+              {{/each}}
             </script>
             <!-- handlebars script from handlebarsjs.com -->
             <script id="entry-template" type="text/x-handlebars-template">
