add template-author-article loop end

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
               {{#each authors}}
               <li><a href="#author-{{ author }}" class="{{className}}"><span>{{ author }}</span></a></li>
               <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+              {{/each}}
             </script>
             <!-- empty object tagCloudLink -->
             <!-- <script id="template-tag-Cloud-Link" type="text/x-handlebars-template">
